lab01: added private key file to inventory

--- a/labs/01-inventory-file/inventory.ini
+++ b/labs/01-inventory-file/inventory.ini
@@ -1,3 +1,3 @@
 [web]
-ubuntu  ansible_host=192.168.147.95 ansible_user=root
-almalinux  ansible_host=192.168.147.203 ansible_user=root
+ubuntu  ansible_host=192.168.147.95 ansible_user=root ansible_ssh_private_key_file=mykey.pem
+almalinux  ansible_host=192.168.147.203 ansible_user=root ansible_ssh_private_key_file=mykey.pem
