--- a/labs/01-inventory-file/install-docker.yaml
+++ b/labs/01-inventory-file/install-docker.yaml
@@ -8,7 +8,7 @@
     apt: update_cache=yes
 
   - name: Install packages to allow apt to use a repository over HTTPS
-    apt: name=apt-transport-https,ca-certificates,curl,software-properties-common state=installed
+    apt: name=apt-transport-https,ca-certificates,curl,software-properties-common state=present
 
   - name: Add Docker's official GPG key
     apt_key: url=https://download.docker.com/linux/ubuntu/gpg state=present
@@ -17,7 +17,7 @@
     apt_repository: repo='deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable'
 
   - name: Install Docker CE
-    apt: name=docker-ce state=installed
+    apt: name=docker-ce state=present
 
   - name: Start and enable Docker service
     service: name=docker state=started enabled=yes
